# AGV

./: README.md
AGV_GUI_project/: Agv_gui_opencv.py  agv_gui_pyav.py  socketio_client.py
AGV_robot_project 0402/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
AGV_robot_project 0402/launch/: agv_launch.py
AGV_robot_project 0402/scripts/: camerastream.sh  emergency_stop.py
AGV_robot_project 0402/src/agv_robot_project/: connect_node.py  drive_node.py  ethernet_node.py  lidar_node.py  pico_node.py  watchdog_node.py
AGV_server_project 0402/: Dockerfile  README.md  common.py  docker-compose.yml  redis_db.py  requirements.txt  server.py
AGV_server_project 0402/rtmp/: nginx.conf
