<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agv_robot_project</name>
  <version>0.0.0</version>
  <description>agv_robot_project</description>
  <maintainer email="hwangwin7@naver.com">hwangwin7</maintainer>
  <license>kinetix</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>socketio</depend>
  <depend>serial</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
